<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="gr.teiath.teiathservices.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/carpooling"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:onClick="onClick"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:contentDescription="@string/carpooling_service_text"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/actions_carpooling"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:gravity="start|center_vertical"
            android:text="@string/carpooling_service_text"
            tools:layout_editor_absoluteX="103dp"
            tools:layout_editor_absoluteY="0dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/swaps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:onClick="onClick"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carpooling">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:contentDescription="@string/swaps_service_text"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/actions_swaps"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:gravity="start|center_vertical"
            android:text="@string/swaps_service_text"
            tools:layout_editor_absoluteX="103dp"
            tools:layout_editor_absoluteY="0dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/educult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:onClick="onClick"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swaps">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:contentDescription="@string/educult_service_text"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/actions_educult"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:gravity="start|center_vertical"
            android:text="@string/educult_service_text"
            tools:layout_editor_absoluteX="103dp"
            tools:layout_editor_absoluteY="0dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
